--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Shahil Kumar Gope",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.21.0",
     "mongoose": "^8.6.3",
     "nodemon": "^3.1.6",
